Fixed files entry in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "./bin/npm-self-link.js",
   "files": [
     "bin",
-    "dist"
+    "lib"
   ],
   "scripts": {
     "precommit": "lint-staged",
