--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lib"
   ],
   "scripts": {
+    "build": "babel src -d lib",
     "precommit": "lint-staged",
+    "prepare": "npm run build",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
     "release:major": "npm version major && npm publish && git push --follow-tags"
@@ -29,6 +31,9 @@
   },
   "homepage": "https://github.com/Andarist/npm-self-link#readme",
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "fast-async": "^6.3.8",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
     "prettier": "^1.15.2"
