--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "fast-async": "^6.3.8",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
-    "prettier": "^1.15.2"
+    "prettier": "^1.15.2",
+    "util.promisify": "^1.0.0"
   },
   "dependencies": {
     "path-exists": "^3.0.0",
