--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "fast-async": "^6.3.8",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
-    "prettier": "^1.15.2",
-    "util.promisify": "^1.0.0"
+    "prettier": "^1.15.2"
   },
   "dependencies": {
     "path-exists": "^3.0.0",
-    "pkg-up": "^2.0.0"
+    "pkg-up": "^2.0.0",
+    "util.promisify": "^1.0.0"
   }
 }
